[package]
name = "robotics"
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "Rust implementation of robotics algorithms"
authors = [ "Jean-Gabriel Simard <jeangab23@gmail.com>" ]
repository = "https://github.com/jgsimard/RustRobotics"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = {version = "0.32", features=["rand-no-std"]}
plotters = "0.3"
csv = "1.2"
serde = { version = "1.0", features = ["derive"] }
rustc-hash = "1.1"
rand = "0.8"
rand_distr = "0.4"

# not used at the moment
# pyo3 = { version = "0.18", features = ["extension-module"] }
# numpy = "0.18" # for python port

[dev-dependencies]
criterion = "0.4"
approx = "0.5"

[lib]
name = "robotics"
crate-type = ["cdylib", "lib"] # cdylib=python, lib=rust

[profile.dev]
opt-level = 1
debug = 2
incremental = true
codegen-units = 512


[[example]]
name = "ekf"
path = "examples/localization/extended_kalman_filter.rs"


[[example]]
name = "ukf"
path = "examples/localization/unscented_kalman_filter.rs"

[[example]]
name = "ekf_lm"
path = "examples/localization/extended_kalman_filter_landmarks.rs"

[[example]]
name = "pf_lm"
path = "examples/localization/particle_filter.rs"


[[bench]]
name = "kf_benchmark"
harness = false

